# sap-assignment-03

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  generate-slo-report.ps1  health-check.ps1  index.html  test-k8s.ps1
.github/workflows/: documentation.yaml
approach/: main.qd
business_case/: main.qd
closing/: main.qd
code_documentation/: _nav.qd  _setup.qd  agent.qd  architettura.qd  common.qd  delivery.qd  evoluzione.qd  k8s.qd  order.qd
common/: Cargo.toml
common/src/: events.rs  lib.rs  messages.rs  trace.rs
delivery/: Cargo.toml  Dockerfile
delivery/src/: consumer.rs  main.rs  service.rs
documentation/: index.html
documentation/approach/: main.qd
documentation/business_case/: main.qd
documentation/closing/: main.qd
documentation/code_documentation/: _nav.qd  _setup.qd  agent.qd  architettura.qd  common.qd  conclusioni.qd  delivery.qd  drone.qd  k8s.qd  kafka.qd  main.qd  order.qd  slo.qd  testing.qd
documentation/cos/: main.qd
documentation/gantt/: gantt.mmd  main.qd
documentation/methodology/: main.qd
documentation/monitoring/: main.qd
documentation/pds/: main.qd
documentation/pos/: main.qd
documentation/project_charter/: main.qd
documentation/rbs/: main.qd
documentation/risk/: main.qd
documentation/stakeholder/: main.qd
drone/: Cargo.toml  Dockerfile
drone/src/: agent.rs  api.rs  beliefs.rs  consumer.rs  fleet.rs  intentions.rs  main.rs  metrics.rs  model.rs  service.rs  store.rs
gantt/: main.qd  network.mmd
k8s/: configmap.yml  delivery-service.yml  drone-service.yml  ingress.yml  kafka-ui.yml  kafka.yml  mongodb.yml  namespace.yml  order-service.yml  prometheus.yml  secret.yml
methodology/: main.qd
order/: Cargo.toml  Dockerfile
order/src/: api.rs  consumer.rs  http_metrics.rs  main.rs  orchestrator.rs  repository.rs  saga.rs  service.rs
pds/: main.qd
pos/: main.qd
project_charter/: main.qd
rbs/: main.qd
reports/: slo-report-20260602-172844.md  slo-report-latest.md
risk/: main.qd
sow/: main.qd
stakeholder/: main.qd
wbs/: main.qd
