[package]
name = "drone"
version = "0.1.0"
edition = "2024"

[dependencies]
common             = { path = "../common" }
anyhow             = "1"
axum               = "0.8"
chrono             = { version = "0.4", features = ["serde"] }
futures            = "0.3"
rdkafka            = { version = "0.37", features = ["cmake-build", "tokio"] }
mongodb            = "3"
rand               = "0.8"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4"] }
