[package]
name = "order"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
mongodb = "3.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
uuid = "1.23.0"
